finish jonah section

--- a/index.html
+++ b/index.html
@@ -57,81 +57,40 @@
             </div>
           </section>
         </section>
+        <input
+          type="radio"
+          name="paper-size"
+          value="us-letter"
+          id="us-letter"
+        />
+        <label for="us-letter">US Letter</label>
+        <input type="radio" name="paper-size" value="a4" id="a4" checked />
+        <label for="a4">A4</label>
+        <input type="radio" name="paper-size" value="a5" id="a5" />
+        <label for="a5">A5</label>
         <section id="jonah">
-          <h2>Jonah's (absolute) unit avontuur</h2>
+          <h2>Jonah's productivity setup</h2>
+          <ul>
+            <li>Task manager: Things 3</li>
+            <li>Calendar: Fantastical</li>
+            <li>Note taking: Craft Notes</li>
+            <li>Journal: Baronfig Confidant</li>
+          </ul>
           <p>
-            Je kent de standaard units wel: px, em, rem. Percentages zal je ook
-            wel kennen, en eventueel de viewport units (vw en vh), maar er zijn
-            er veel meer!
+            I have quite a robust system consisting of four different pieces. I
+            usually write three tasks in my journal that I do for the day, apart
+            from the usual errands you typically run and other household tasks.
+            I keep track of all tasks in Things 3, including household tasks. It
+            keeps me on track with everything I care about. With my ADHD, it's
+            easy to lose track of what I've done and become complacent.
           </p>
-          <h3>Wat coole size-units</h3>
-          <ul>
-            <li>
-              Deze tekst pakt de minst lange kant van het browser venster, en
-              neem daarvan 2% om de font-size te bepalen
-            </li>
-            <li>
-              Deze tekst pakt de langste kant van het browser venster, en neem
-              daarvan 1% om de font-size te bepalen
-            </li>
-            <li>
-              Deze tekst heeft een font size van 1pc (wat blijkbaar pica
-              betekent en 12pt groot is)
-            </li>
-            <li>Deze tekst ook, maar dan uitgedrukt in pt</li>
-            <li>
-              Deze tekst is 3 keer zo groot als de breedte de glyph "0" in het
-              lettertype (uitgedrukt in ch, wat goed bier ook heeft)
-            </li>
-            <li>
-              Voor de mensen die achterwaarts werken is deze tekst 0,2 inches
-              groot
-            </li>
-            <li>Voor de gewone mens is dit een halve centimeter</li>
-            <li>
-              Maar als je toch een beetje wappie bent heb je hier een tekst van
-              20 kwart-millimeters
-            </li>
-            <li>Hier, 5 millimeter. Een stuk normaler</li>
-            <li>
-              Hier, heb 3 exen, en dan heb ik het over de x-hoogte van letters.
-              Dat is even hoog als deze letter "o"
-            </li>
-          </ul>
-          <h3>Wat andere soorten units</h3>
-          <ul>
-            <li>
-              Deze tekst is 1/20e rotatie gedraaid met
-              <code>transform: rotate(0.05turn);</code>. 1 turn is 360 graden
-            </li>
-            <li>
-              Deze tekst is 20 gradians gedraaid met
-              <code>transform: rotate(20grad);</code>. 400grad is 1turn
-            </li>
-            <li>
-              Je hebt ook nog <code>rads</code>, maar daar zou ik niet aan
-              beginnen, tenzij je van wiskunde houdt net zoals Sanne. Daarvoor
-              heb je
-              <a
-                href="https://developer.mozilla.org/en-US/docs/Web/CSS/angle#rad"
-                target="_blank"
-              >
-                hier de docs
-              </a>
-            </li>
-          </ul>
-          <h3>Wat over mij</h3>
           <p>
-            Ik vind productiviteit een erg interessant onderwerp, en leer er
-            continu meer over.
+            I takes notes in an app called Craft Notes, a competitor to Notion.
+            I prefer the way it organises my notes, so that's why I use it. For
+            calendaring, I prefer Fantastical. It has natural language input
+            support, which means I can write all the details of the event in a
+            single sentence and get on my way quickly.
           </p>
-          <h4>Wat ik gebruik</h4>
-          <ul>
-            <li>Things 3</li>
-            <li>Fantastical</li>
-            <li>Craft Notes</li>
-            <li>Baronfig Confidant notebook</li>
-          </ul>
         </section>
       </article>
     </main>
