add clamp, min and max example

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
             </div>
           </section>
         </section>
+        <h2>Paper size</h2>
         <input
           type="radio"
           name="paper-size"
@@ -88,6 +89,13 @@
         <label for="a4">A4</label>
         <input type="radio" name="paper-size" value="a5" id="a5" />
         <label for="a5">A5</label>
+        <input
+          type="radio"
+          name="paper-size"
+          value="responsive"
+          id="responsive"
+        />
+        <label for="responsive">Responsive</label>
         <section id="jonah">
           <h2>Jonah's productivity setup</h2>
           <ul>
