--- a/eindopdracht/index.html
+++ b/eindopdracht/index.html
@@ -1,317 +1,281 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8" />
-	<title>A template for a responsive restaurant menu</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="styles/main.css">
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Lemonada:wght@500&display=swap" rel="stylesheet">
-	<!-- SUGGESTIONS FOR STYLING
-	https://duckduckgo.com/?q=beautiful+restaurant+menus&t=ffab&iax=images&ia=images
-	-->
-</head>
-<body>
-
-<header>
-	<h1><span>Russ</span> <span>&</span> <span>Daughters</span></h1>
-  <p>appetizing since 1924</p>
-  
-</header>
-
-<main>
-
-<section>
-	<header>
-		<h2>Noshes</h2>
-		<p>small dishes</p>
-	</header>
-
-	<article>
-		<h3>Russ &amp;  Daughters Knishes</h3>
-		<p>Potato, carmelized onion, mustard</p>
-		<div>8</div> <!-- price -->
-	</article>
-
-	<article>
-		<h3>Hot Smoke/Cold Smoke</h3>
-		<p>Kippered baked Salmon &amp; Scottish smoked salmon spread, waffle-cut potato chips</p>
-		<div>13</div>
-	</article>
-
-	<article>
-		<h3>Potato latkes</h3>
-		<p>Salmon roe and creme fraiche</p>
-		<div>13</div>
-	</article>
-
-	<article>
-		<h3>Kasha Varnishkas</h3>
-		<p>buckwheat, caramelized onion, bowtie egg noodles</p>
-	</article>
-
-	<article>
-		<h3>Chopped liver</h3>
-		<p>Matzo, pickled red onion</p>
-		<div>9</div>
-	</article>
-
-	<article>
-		<h3>Super heebster</h3>
-		<p>whitefish &amp; baked salmon salad, wasabi-infused fish roe, horseradish dill cream cheese, bagel toast</p>
-		<div>10</div>
-	</article>
-
-	<article>
-		<h3>Pastrami Russ</h3>
-		<p>pastrami-cured salmon, muenster cheese, sauerkraut, mustard, pickle, pretzel roll</p>
-		<div>12</div>
-	</article>
-
-	<article>
-		<h3>sours</h3>
-		<p>pickled vegetables, pickles from the barrel</p>
-		<div>7</div>
-	</article>
-</section>
-
-
-<section>
-	<header>
-		<h2>boards</h2>
-		<p>open-faced sandwiches</p>
-	</header>
-
-	<article>
-		<h3>the classic</h3>
-		<p>gaspe nova smoked salmon, cream cheese, bagel-bialy, tomato, onion, capers</p>
-		<div>16</div>
-	</article>
-
-	<article>
-		<h3>mensch</h3>
-		<p>sturgeon, butter, bagel/bialy, tomato, onion, capers</p>
-		<div>22</div>
-	</article>
-
-	<article>
-		<h3>shtetl</h3>
-		<p>smoked sable, goat cream cheese, bagel-bialy, tomato, onion, capers</p>
-		<div>18</div>
-	</article>
-
-	<article>
-		<h3>yum kippered</h3>
-		<p>kippered (baked) salmon, cream cheese, bagel/bialy, tomato, onion, capers</p>
-		<div>16</div>
-	</article>
-</section>
-
-
-<section>
-
-	<header>
-		<h2>platters</h2>
-		<p>To be shared</p>
-	</header>
-
-	<article>
-		<h3>smoked fish</h3>
-		<p><em>Serves 3 - 4 people</em> with cream cheese, onion, tomato, capers &amp; new potato salad and Russ &amp; daughters bread basket</p>
-	</article>
-
-	<article>
-		<h3>the hattie</h3>
-		<p>smoked whitefish, kippered (baked) salmon, gaspe nova smoked salmon, sable</p>
-		<div>80</div>
-	</article>
-
-	<article>
-		<h3>the ida</h3>
-		<p>scottish smoked salmon, gaspe nova smoked salmon, pastrami-cured salmon, gravlox</p>
-		<div>70</div>
-	</article>
-
-	<article>
-		<h3>the anne</h3>
-		<p>western nova smoked salmon, private stock sturgeon, sable, smoked brook trout, wild alaskan salmon roe</p>
-		<div>90</div>
-	</article>
-
-</section>
-
-
-<section>
-
-	<header>
-		<h2>Eggs</h2>
-		<p>served all the time</p>
-	</header>
-
-	<blockquote>
-		<p>"Ess gezinter hayt."</p>
-		<p>Eat in good health.</p>
-		<cite>— Yiddish idiom</cite>
-	</blockquote>
-
-	<article>
-		<h3>Lox, eggs &amp; onions</h3>
-		<p>with toasted shissel rye</p>
-		<div>15</div>
-	</article>
-
-	<article>
-		<h3>sturgeon, eggs &amp; onion</h3>
-		<p>with toasted pumpernickel</p>
-		<div>19</div>
-	</article>
-
-	<article>
-		<h3>bella's matzo brei</h3>
-		<p>matzo, egg, applesauce, sour cream</p>
-		<div>12</div>
-	</article>
-
-	<article>
-		<h3>lower sunny side</h3>
-		<p>sunny side up eggs, gaspe nova smoked salmon, potato latkes</p>
-		<div>16</div>
-	</article>
-
-	<article>
-		<h3>eggs benny</h3>
-		<p>poached eggs, scottish smoked salmon, sautéed spinach, hollandaise, challah</p>
-		<div>18</div>
-	</article>
-
-	<article>
-		<h3>farm egg omelette</h3>
-		<p>gaspe nova smoked salmon, cream cheese</p>
-		<div>15</div>
-	</article>
-
-	<article>
-		<h3>soft scrambled eggs &amp; caviar</h3>
-		<p>custard-like egg, caviar with challah</p>
-		<div>180</div>
-	</article>
-
-</section>
-
-
-<section>
-	<h2>Soup</h2>
-
-	<article>
-		<h3>Matzo Ball</h3>
-		<p>chicken, vegetables, matzo ball</p>
-		<div>8</div>
-	</article>
-
-	<article>
-		<h3>Mushroom Barley</h3>
-		<p>mushrooms, barley with shissel rye bread</p>
-		<div>8</div>
-	</article>
-
-	<article>
-		<h3>Borscht</h3>
-		<p>served chilled: beets, sour cream, dill with pumpernickel</p>
-		<div>8</div>
-	</article>
-	
-	<article>
-		<h3>Smoked Whitefish Chowder</h3>
-		<p>dill, esplette pepper, matzo</p>
-		<div>10</div>
-	</article>
-
-</section>
-
-	<h2>salads</h2>
-
-	<article>
-		<h3>Mixed Green<div>9</div></h3>
-		<p>greens, fennel, dill, capers, citrus dressing</p>
-	</article>
-
-	<article>
-		<h3>Chopped Salad<div>14</div></h3>
-		<p>smoked whitefish, avocado, beets, egg, apple, mixed greens, matzo, buttermilk dressing</p>
-	</article>
-
-	<article>
-		<h3>Smoked Trout& Potato</h3>
-		<p>smoked trout, watercress, caper mustard dressing</p>
-		<div>14</div>
-	</article>
-
-</section>
-
-
-<section>
-	<h2>sweet</h2>
-
-	<blockquote>
-		<p>"A moltsayt on a tsimes iz via a mayse on a moshl."</p>
-		<p>A meal without a sweet dish is like a story without a moral.</p>
-		<cite>— Yiddish idiom</cite>
-	</blockquote>
-
-
-	<article>
-		<h3>blintzes</h3>
-		<p>fruit compote, sour cream</p>
-		<div>8</div>
-	</article>
-
-	<article>
-		<h3>babka french toast</h3>
-		<p>chocolate babka, sour cream, berries</p>
-		<div>10</div>
-	</article>
-
-	<article>
-		<h3>noodle kugel</h3>
-		<p>farmer cheese, raisins, egg noodles</p>
-		<div>7</div>
-	</article>
-
-	<article>
-		<h3>challah bread pudding</h3>
-		<p>dried apricots, caramel sauce</p>
-		<div>9</div>
-	</article>
-
-	<article>
-		<h3>halvah ice cream</h3>
-		<p>halvah, sesame, salted caramel</p>
-		<div>8</div>
-	</article>
-
-	<article>
-		<h3>grandpa's grapefruit</h3>
-		<p>grapefruit, white germ, maple syrup</p>
-		<div>6</div>
-	</article>
-
-	<article>
-		<h3>baked farmer cheese</h3>
-		<p>blueberry, walnut &amp; honey with pumpernickel</p>
-		<div>7</div>
-	</article>
-
-	<article>
-		<h3>cookie plate</h3>
-		<p>Russ &amp; daughters cookies &amp; sweets</p>
-		<div>8</div>
-	</article>
-
-</section>
-
-</main>
-
-<!-- HTML taken and adjusted from https://codepen.io/julesforrest/pen/VqXvgQ -->
-
+	<head>
+		<meta charset="utf-8" />
+		<title>Russ & Daughters</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="styles/main.css">
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+		<link href="https://fonts.googleapis.com/css2?family=Lemonada:wght@500&display=swap" rel="stylesheet">
+		<!-- SUGGESTIONS FOR STYLING
+		https://duckduckgo.com/?q=beautiful+restaurant+menus&t=ffab&iax=images&ia=images
+		-->
+	</head>
+	<body>
+		<header>
+			<input type="checkbox" id="switch">
+			<label for="switch">
+				<svg width="445" height="49" viewBox="0 0 445 49" fill="none" class="knifeSvg" xmlns="http://www.w3.org/2000/svg">
+					<path d="M0 17.1093C0 7.6779 7.67774 0.0492163 17.109 0.109673L234 1.5V27.5L0 29V17.1093Z" fill="black"/>
+					<path d="M438 1.5H234V27.5924H250.541V45.1434C336.351 58.7588 412.771 20.8238 438 1.5Z" fill="#E9E6E6"/>
+					<path d="M433 1.5H234V27.5H250.5V40C336.1 52.8 407.833 19.6667 433 1.5Z" fill="#C4C4C4"/>
+					<circle cx="14" cy="14" r="4" fill="#C4C4C4"/>
+					<path d="M404.5 1.5H438C423.6 15.1 389.667 28.1667 374.5 33L374.498 32.9921C373.625 33.4066 368.946 35.5542 374 30.5C375.396 29.1906 380 26.5 382 24.5C382.811 23.6894 382.989 22.4458 383.058 21.1053C383.233 17.7156 385.899 15.7138 388.937 14.2021C391.193 13.0799 393.333 11.5011 394 9.5C395.2 5.9 401.5 2.66667 404.5 1.5Z" fill="#831616"/>
+					<path d="M411.5 24.5C407.9 21.7 405.333 21.3333 404.5 21.5L412.5 17.5C412.667 17.8333 413.6 19.4 416 23C417.518 25.2773 420.45 27.808 423.075 29.7821C425.377 31.5138 427.064 34.6114 425.422 36.9782C423.697 39.4643 421.33 38.0982 419.5 37C417.314 35.6883 416 28 411.5 24.5Z" fill="#831616"/>
+					<path d="M426.4 18.3881C422.08 14.6328 419 14.1411 418 14.3646L427.6 9C427.8 9.44705 428.92 11.5482 431.8 16.3763C433.854 19.8206 438.067 23.697 441.474 26.4478C443.577 28.1451 444.871 30.8775 443.925 33.4085C441.842 38.9765 438.503 36.831 436 35.1525C433.377 33.3933 431.8 23.0821 426.4 18.3881Z" fill="#831616"/>
+				</svg>
+			</label>
+			<h1><span>Russ</span> <span>&</span> <span>Daughters</span></h1>
+			<p>appetizing since 1924</p>
+		</header>
+		<main>
+			<section>
+				<header>
+					<h2 data-text="Noshes">Noshes</h2>
+					<p>small dishes</p>
+				</header>
+				<div>
+					<article>
+						<h3>Russ &amp;  Daughters Knishes</h3>
+						<p>Potato, carmelized onion, mustard</p>
+						<div>8</div> <!-- price -->
+					</article>
+					<article>
+						<h3>Hot Smoke/Cold Smoke</h3>
+						<p>Kippered baked Salmon &amp; Scottish smoked salmon spread, waffle-cut potato chips</p>
+						<div>13</div>
+					</article>
+					<article>
+						<h3>Potato latkes</h3>
+						<p>Salmon roe and creme fraiche</p>
+						<div>13</div>
+					</article>
+					<article>
+						<h3>Kasha Varnishkas</h3>
+						<p>buckwheat, caramelized onion, bowtie egg noodles</p>
+						<div>9</div>
+					</article>
+					<article>
+						<h3>Chopped liver</h3>
+						<p>Matzo, pickled red onion</p>
+						<div>9</div>
+					</article>
+					<article>
+						<h3>Super heebster</h3>
+						<p>whitefish &amp; baked salmon salad, wasabi-infused fish roe, horseradish dill cream cheese, bagel toast</p>
+						<div>10</div>
+					</article>
+					<article>
+						<h3>Pastrami Russ</h3>
+						<p>pastrami-cured salmon, muenster cheese, sauerkraut, mustard, pickle, pretzel roll</p>
+						<div>12</div>
+					</article>
+					<article>
+						<h3>sours</h3>
+						<p>pickled vegetables, pickles from the barrel</p>
+						<div>7</div>
+					</article>
+				</div>
+			</section>
+			<section>
+				<header>
+					<h2 data-text="Boards">Boards</h2>
+					<p>open-faced sandwiches</p>
+				</header>
+				<div>
+					<article>
+						<h3>the classic</h3>
+						<p>gaspe nova smoked salmon, cream cheese, bagel-bialy, tomato, onion, capers</p>
+						<div>16</div>
+					</article>
+					<article>
+						<h3>mensch</h3>
+						<p>sturgeon, butter, bagel/bialy, tomato, onion, capers</p>
+						<div>22</div>
+					</article>
+					<article>
+						<h3>shtetl</h3>
+						<p>smoked sable, goat cream cheese, bagel-bialy, tomato, onion, capers</p>
+						<div>18</div>
+					</article>
+					<article>
+						<h3>yum kippered</h3>
+						<p>kippered (baked) salmon, cream cheese, bagel/bialy, tomato, onion, capers</p>
+						<div>16</div>
+					</article>
+				</div>
+			</section>
+			<section>
+				<header>
+					<h2 data-text="Platters">Platters</h2>
+					<p>To be shared</p>
+				</header>
+				<div>
+					<article>
+						<h3>smoked fish</h3>
+						<p><em>Serves 3 - 4 people</em> with cream cheese, onion, tomato, capers &amp; new potato salad and Russ &amp; daughters bread basket</p>
+					</article>
+					<article>
+						<h3>the hattie</h3>
+						<p>smoked whitefish, kippered (baked) salmon, gaspe nova smoked salmon, sable</p>
+						<div>80</div>
+					</article>
+					<article>
+						<h3>the ida</h3>
+						<p>scottish smoked salmon, gaspe nova smoked salmon, pastrami-cured salmon, gravlox</p>
+						<div>70</div>
+					</article>
+					<article>
+						<h3>the anne</h3>
+						<p>western nova smoked salmon, private stock sturgeon, sable, smoked brook trout, wild alaskan salmon roe</p>
+						<div>90</div>
+					</article>
+				</div>
+			</section>
+			<section>
+				<header>
+					<h2 data-text="Eggs">Eggs</h2>
+					<p>served all the time</p>
+				</header>
+				<blockquote>
+					<p>"Ess gezinter hayt."</p>
+					<p>Eat in good health.</p>
+					<cite>— Yiddish idiom</cite>
+				</blockquote>
+				<div>
+					<article>
+						<h3>Lox, eggs &amp; onions</h3>
+						<p>with toasted shissel rye</p>
+						<div>15</div>
+					</article>
+					<article>
+						<h3>sturgeon, eggs &amp; onion</h3>
+						<p>with toasted pumpernickel</p>
+						<div>19</div>
+					</article>
+					<article>
+						<h3>bella's matzo brei</h3>
+						<p>matzo, egg, applesauce, sour cream</p>
+						<div>12</div>
+					</article>
+					<article>
+						<h3>lower sunny side</h3>
+						<p>sunny side up eggs, gaspe nova smoked salmon, potato latkes</p>
+						<div>16</div>
+					</article>
+					<article>
+						<h3>eggs benny</h3>
+						<p>poached eggs, scottish smoked salmon, sautéed spinach, hollandaise, challah</p>
+						<div>18</div>
+					</article>
+					<article>
+						<h3>farm egg omelette</h3>
+						<p>gaspe nova smoked salmon, cream cheese</p>
+						<div>15</div>
+					</article>
+					<article>
+						<h3>soft scrambled eggs &amp; caviar</h3>
+						<p>custard-like egg, caviar with challah</p>
+						<div>180</div>
+					</article>
+				</div>
+			</section>
+			<section>
+				<h2 data-text="Soup">Soup</h2>
+				<div>
+					<article>
+						<h3>Matzo Ball</h3>
+						<p>chicken, vegetables, matzo ball</p>
+						<div>8</div>
+					</article>
+					<article>
+						<h3>Mushroom Barley</h3>
+						<p>mushrooms, barley with shissel rye bread</p>
+						<div>8</div>
+					</article>
+					<article>
+						<h3>Borscht</h3>
+						<p>served chilled: beets, sour cream, dill with pumpernickel</p>
+						<div>8</div>
+					</article>
+					
+					<article>
+						<h3>Smoked Whitefish Chowder</h3>
+						<p>dill, esplette pepper, matzo</p>
+						<div>10</div>
+					</article>
+				</div>
+			</section>
+			<section>
+			<h2 data-text="Salads">Salads</h2>
+			<div>
+				<article>
+					<h3>Mixed Green<div>9</div></h3>
+					<p>greens, fennel, dill, capers, citrus dressing</p>
+				</article>
+				<article>
+					<h3>Chopped Salad<div>14</div></h3>
+					<p>smoked whitefish, avocado, beets, egg, apple, mixed greens, matzo, buttermilk dressing</p>
+				</article>
+				<article>
+					<h3>Smoked Trout& Potato</h3>
+					<p>smoked trout, watercress, caper mustard dressing</p>
+					<div>14</div>
+				</article>
+			</div>
+		</section>
+		<section>
+			<h2 data-text="Sweet">Sweet</h2>
+			<blockquote>
+				<p>"A moltsayt on a tsimes iz via a mayse on a moshl."</p>
+				<p>A meal without a sweet dish is like a story without a moral.</p>
+				<cite>— Yiddish idiom</cite>
+			</blockquote>
+			<div>
+				<article>
+					<h3>blintzes</h3>
+					<p>fruit compote, sour cream</p>
+					<div>8</div>
+				</article>
+				<article>
+					<h3>babka french toast</h3>
+					<p>chocolate babka, sour cream, berries</p>
+					<div>10</div>
+				</article>
+				<article>
+					<h3>noodle kugel</h3>
+					<p>farmer cheese, raisins, egg noodles</p>
+					<div>7</div>
+				</article>
+				<article>
+					<h3>challah bread pudding</h3>
+					<p>dried apricots, caramel sauce</p>
+					<div>9</div>
+				</article>
+				<article>
+					<h3>halvah ice cream</h3>
+					<p>halvah, sesame, salted caramel</p>
+					<div>8</div>
+				</article>
+				<article>
+					<h3>grandpa's grapefruit</h3>
+					<p>grapefruit, white germ, maple syrup</p>
+					<div>6</div>
+				</article>
+				<article>
+					<h3>baked farmer cheese</h3>
+					<p>blueberry, walnut &amp; honey with pumpernickel</p>
+					<div>7</div>
+				</article>
+				<article>
+					<h3>cookie plate</h3>
+					<p>Russ &amp; daughters cookies &amp; sweets</p>
+					<div>8</div>
+				</article>
+			</div>
+		</section>
+	</main>
+	<!-- http://beatrizl.com/project/ancho -->
+	<!-- HTML taken and adjusted from https://codepen.io/julesforrest/pen/VqXvgQ -->
 </body>
 </html>
