Added print sheet, language and tabindex

--- a/eindopdracht/index.html
+++ b/eindopdracht/index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<meta charset="utf-8" />
 		<title>Russ & Daughters</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="styles/main.css">
+		<link rel="stylesheet" media="print" href="styles/print.css">
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Lemonada:wght@500&display=swap" rel="stylesheet">
-		<!-- SUGGESTIONS FOR STYLING
-		https://duckduckgo.com/?q=beautiful+restaurant+menus&t=ffab&iax=images&ia=images
-		-->
 	</head>
 	<body>
-		<header>
+		<header tabindex="0">
 			<input type="checkbox" id="switch">
 			<label for="switch">
 				<svg width="445" height="49" viewBox="0 0 445 49" fill="none" class="knifeSvg" xmlns="http://www.w3.org/2000/svg">
