Added tabindexes, spans for blockqoutes, accessibility text and squid svg

--- a/eindopdracht/index.html
+++ b/eindopdracht/index.html
@@ -23,255 +23,275 @@
 					<path d="M426.4 18.3881C422.08 14.6328 419 14.1411 418 14.3646L427.6 9C427.8 9.44705 428.92 11.5482 431.8 16.3763C433.854 19.8206 438.067 23.697 441.474 26.4478C443.577 28.1451 444.871 30.8775 443.925 33.4085C441.842 38.9765 438.503 36.831 436 35.1525C433.377 33.3933 431.8 23.0821 426.4 18.3881Z" fill="#831616"/>
 				</svg>
 			</label>
-			<h1><span>Russ</span> <span>&</span> <span>Daughters</span></h1>
-			<p>appetizing since 1924</p>
+			<h1 tabindex="0"><span>Russ</span> <span>&</span> <span>Daughters</span></h1>
+			<p tabindex="0">appetizing since 1924</p>
 		</header>
 		<main>
-			<section>
-				<header>
-					<h2 data-text="Noshes">Noshes</h2>
-					<p>small dishes</p>
+			<section tabindex="0">
+				<header tabindex="0">
+					<h2 tabindex="0" data-text="Noshes">Noshes</h2>
+					<p tabindex="0">small dishes</p>
 				</header>
-				<div>
+				<div tabindex="0">
 					<article>
-						<h3>Russ &amp;  Daughters Knishes</h3>
-						<p>Potato, carmelized onion, mustard</p>
-						<div>8</div> <!-- price -->
+						<h3 tabindex="0">Russ &amp;  Daughters Knishes</h3>
+						<p tabindex="0">Potato, carmelized onion, mustard</p>
+						<div tabindex="0">8</div> <!-- price -->
 					</article>
 					<article>
-						<h3>Hot Smoke/Cold Smoke</h3>
-						<p>Kippered baked Salmon &amp; Scottish smoked salmon spread, waffle-cut potato chips</p>
-						<div>13</div>
+						<h3 tabindex="0">Hot Smoke/Cold Smoke</h3>
+						<p tabindex="0">Kippered baked Salmon &amp; Scottish smoked salmon spread, waffle-cut potato chips</p>
+						<div tabindex="0">13</div>
 					</article>
 					<article>
-						<h3>Potato latkes</h3>
-						<p>Salmon roe and creme fraiche</p>
-						<div>13</div>
+						<h3 tabindex="0">Potato latkes</h3>
+						<p tabindex="0">Salmon roe and creme fraiche</p>
+						<div tabindex="0">13</div>
 					</article>
 					<article>
-						<h3>Kasha Varnishkas</h3>
-						<p>buckwheat, caramelized onion, bowtie egg noodles</p>
-						<div>9</div>
+						<h3 tabindex="0">Kasha Varnishkas</h3>
+						<p tabindex="0">buckwheat, caramelized onion, bowtie egg noodles</p>
+						<div tabindex="0">9</div>
 					</article>
 					<article>
-						<h3>Chopped liver</h3>
-						<p>Matzo, pickled red onion</p>
-						<div>9</div>
+						<h3 tabindex="0">Chopped liver</h3>
+						<p tabindex="0">Matzo, pickled red onion</p>
+						<div tabindex="0">9</div>
 					</article>
 					<article>
-						<h3>Super heebster</h3>
-						<p>whitefish &amp; baked salmon salad, wasabi-infused fish roe, horseradish dill cream cheese, bagel toast</p>
-						<div>10</div>
+						<h3 tabindex="0">Super heebster</h3>
+						<p tabindex="0">whitefish &amp; baked salmon salad, wasabi-infused fish roe, horseradish dill cream cheese, bagel toast</p>
+						<div tabindex="0">10</div>
 					</article>
 					<article>
-						<h3>Pastrami Russ</h3>
-						<p>pastrami-cured salmon, muenster cheese, sauerkraut, mustard, pickle, pretzel roll</p>
-						<div>12</div>
+						<h3 tabindex="0">Pastrami Russ</h3>
+						<p tabindex="0">pastrami-cured salmon, muenster cheese, sauerkraut, mustard, pickle, pretzel roll</p>
+						<div tabindex="0">12</div>
 					</article>
 					<article>
-						<h3>sours</h3>
-						<p>pickled vegetables, pickles from the barrel</p>
-						<div>7</div>
+						<h3 tabindex="0">sours</h3>
+						<p tabindex="0">pickled vegetables, pickles from the barrel</p>
+						<div tabindex="0">7</div>
 					</article>
 				</div>
 			</section>
-			<section>
-				<header>
-					<h2 data-text="Boards">Boards</h2>
-					<p>open-faced sandwiches</p>
+			<section tabindex="0">
+				<header tabindex="0">
+					<h2 tabindex="0" data-text="Boards">Boards</h2>
+					<p tabindex="0">open-faced sandwiches</p>
 				</header>
-				<div>
+				<div tabindex="0">
 					<article>
-						<h3>the classic</h3>
-						<p>gaspe nova smoked salmon, cream cheese, bagel-bialy, tomato, onion, capers</p>
-						<div>16</div>
+						<h3 tabindex="0">the classic</h3>
+						<p tabindex="0">gaspe nova smoked salmon, cream cheese, bagel-bialy, tomato, onion, capers</p>
+						<div tabindex="0">16</div>
 					</article>
 					<article>
-						<h3>mensch</h3>
-						<p>sturgeon, butter, bagel/bialy, tomato, onion, capers</p>
-						<div>22</div>
+						<h3 tabindex="0">mensch</h3>
+						<p tabindex="0">sturgeon, butter, bagel/bialy, tomato, onion, capers</p>
+						<div tabindex="0">22</div>
 					</article>
 					<article>
-						<h3>shtetl</h3>
-						<p>smoked sable, goat cream cheese, bagel-bialy, tomato, onion, capers</p>
-						<div>18</div>
+						<h3 tabindex="0">shtetl</h3>
+						<p tabindex="0">smoked sable, goat cream cheese, bagel-bialy, tomato, onion, capers</p>
+						<div tabindex="0">18</div>
 					</article>
 					<article>
-						<h3>yum kippered</h3>
-						<p>kippered (baked) salmon, cream cheese, bagel/bialy, tomato, onion, capers</p>
-						<div>16</div>
+						<h3 tabindex="0">yum kippered</h3>
+						<p tabindex="0">kippered (baked) salmon, cream cheese, bagel/bialy, tomato, onion, capers</p>
+						<div tabindex="0">16</div>
 					</article>
 				</div>
 			</section>
-			<section>
-				<header>
-					<h2 data-text="Platters">Platters</h2>
-					<p>To be shared</p>
+			<section tabindex="0">
+				<header tabindex="0">
+					<h2 tabindex="0" data-text="Platters">Platters</h2>
+					<p tabindex="0">To be shared</p>
 				</header>
-				<div>
+				<div tabindex="0">
 					<article>
-						<h3>smoked fish</h3>
-						<p><em>Serves 3 - 4 people</em> with cream cheese, onion, tomato, capers &amp; new potato salad and Russ &amp; daughters bread basket</p>
+						<h3 tabindex="0">smoked fish</h3>
+						<p tabindex="0"><em>Serves 3 - 4 people</em> with cream cheese, onion, tomato, capers &amp; new potato salad and Russ &amp; daughters bread basket</p>
+						<div tabindex="0">100</div>
 					</article>
 					<article>
-						<h3>the hattie</h3>
-						<p>smoked whitefish, kippered (baked) salmon, gaspe nova smoked salmon, sable</p>
-						<div>80</div>
+						<h3 tabindex="0">the hattie</h3>
+						<p tabindex="0">smoked whitefish, kippered (baked) salmon, gaspe nova smoked salmon, sable</p>
+						<div tabindex="0">80</div>
 					</article>
 					<article>
-						<h3>the ida</h3>
-						<p>scottish smoked salmon, gaspe nova smoked salmon, pastrami-cured salmon, gravlox</p>
-						<div>70</div>
+						<h3 tabindex="0">the ida</h3>
+						<p tabindex="0">scottish smoked salmon, gaspe nova smoked salmon, pastrami-cured salmon, gravlox</p>
+						<div tabindex="0">70</div>
 					</article>
 					<article>
-						<h3>the anne</h3>
-						<p>western nova smoked salmon, private stock sturgeon, sable, smoked brook trout, wild alaskan salmon roe</p>
-						<div>90</div>
+						<h3 tabindex="0">the anne</h3>
+						<p tabindex="0">western nova smoked salmon, private stock sturgeon, sable, smoked brook trout, wild alaskan salmon roe</p>
+						<div tabindex="0">90</div>
 					</article>
 				</div>
 			</section>
-			<section>
-				<header>
-					<h2 data-text="Eggs">Eggs</h2>
-					<p>served all the time</p>
+			<section tabindex="0">
+				<header tabindex="0">
+					<h2 tabindex="0" data-text="Eggs">Eggs</h2>
+					<p tabindex="0">served all the time</p>
 				</header>
 				<blockquote>
-					<p>"Ess gezinter hayt."</p>
-					<p>Eat in good health.</p>
+					<p tabindex="0"><span>"</span><span>Ess</span> <span>gezinter</span> <span>hayt.</span><span>"</span></p>
+					<p tabindex="0">Eat in good health.</p>
 					<cite>— Yiddish idiom</cite>
 				</blockquote>
-				<div>
+				<div tabindex="0">
 					<article>
-						<h3>Lox, eggs &amp; onions</h3>
-						<p>with toasted shissel rye</p>
-						<div>15</div>
+						<h3 tabindex="0">Lox, eggs &amp; onions</h3>
+						<p tabindex="0">with toasted shissel rye</p>
+						<div tabindex="0">15</div>
 					</article>
 					<article>
-						<h3>sturgeon, eggs &amp; onion</h3>
-						<p>with toasted pumpernickel</p>
-						<div>19</div>
+						<h3 tabindex="0">sturgeon, eggs &amp; onion</h3>
+						<p tabindex="0">with toasted pumpernickel</p>
+						<div tabindex="0">19</div>
 					</article>
 					<article>
-						<h3>bella's matzo brei</h3>
-						<p>matzo, egg, applesauce, sour cream</p>
-						<div>12</div>
+						<h3 tabindex="0">bella's matzo brei</h3>
+						<p tabindex="0">matzo, egg, applesauce, sour cream</p>
+						<div tabindex="0">12</div>
 					</article>
 					<article>
-						<h3>lower sunny side</h3>
-						<p>sunny side up eggs, gaspe nova smoked salmon, potato latkes</p>
-						<div>16</div>
+						<h3 tabindex="0">lower sunny side</h3>
+						<p tabindex="0">sunny side up eggs, gaspe nova smoked salmon, potato latkes</p>
+						<div tabindex="0">16</div>
 					</article>
 					<article>
-						<h3>eggs benny</h3>
-						<p>poached eggs, scottish smoked salmon, sautéed spinach, hollandaise, challah</p>
-						<div>18</div>
+						<h3 tabindex="0">eggs benny</h3>
+						<p tabindex="0">poached eggs, scottish smoked salmon, sautéed spinach, hollandaise, challah</p>
+						<div tabindex="0">18</div>
 					</article>
 					<article>
-						<h3>farm egg omelette</h3>
-						<p>gaspe nova smoked salmon, cream cheese</p>
-						<div>15</div>
+						<h3 tabindex="0">farm egg omelette</h3>
+						<p tabindex="0">gaspe nova smoked salmon, cream cheese</p>
+						<div tabindex="0">15</div>
 					</article>
 					<article>
-						<h3>soft scrambled eggs &amp; caviar</h3>
-						<p>custard-like egg, caviar with challah</p>
-						<div>180</div>
+						<h3 tabindex="0">soft scrambled eggs &amp; caviar</h3>
+						<p tabindex="0">custard-like egg, caviar with challah</p>
+						<div tabindex="0">180</div>
 					</article>
 				</div>
 			</section>
-			<section>
-				<h2 data-text="Soup">Soup</h2>
-				<div>
+			<section tabindex="0">
+				<h2 tabindex="0" data-text="Soup">Soup</h2>
+				<div tabindex="0">
 					<article>
-						<h3>Matzo Ball</h3>
-						<p>chicken, vegetables, matzo ball</p>
-						<div>8</div>
+						<h3 tabindex="0">Matzo Ball</h3>
+						<p tabindex="0">chicken, vegetables, matzo ball</p>
+						<div tabindex="0">8</div>
 					</article>
 					<article>
-						<h3>Mushroom Barley</h3>
-						<p>mushrooms, barley with shissel rye bread</p>
-						<div>8</div>
+						<h3 tabindex="0">Mushroom Barley</h3>
+						<p tabindex="0">mushrooms, barley with shissel rye bread</p>
+						<div tabindex="0">8</div>
 					</article>
 					<article>
-						<h3>Borscht</h3>
-						<p>served chilled: beets, sour cream, dill with pumpernickel</p>
-						<div>8</div>
+						<h3 tabindex="0">Borscht</h3>
+						<p tabindex="0">served chilled: beets, sour cream, dill with pumpernickel</p>
+						<div tabindex="0">8</div>
 					</article>
 					
 					<article>
-						<h3>Smoked Whitefish Chowder</h3>
-						<p>dill, esplette pepper, matzo</p>
-						<div>10</div>
+						<h3 tabindex="0">Smoked Whitefish Chowder</h3>
+						<p tabindex="0">dill, esplette pepper, matzo</p>
+						<div tabindex="0">10</div>
 					</article>
 				</div>
 			</section>
-			<section>
-			<h2 data-text="Salads">Salads</h2>
-			<div>
+			<section tabindex="0">
+			<h2 tabindex="0" data-text="Salads">Salads</h2>
+			<div tabindex="0">
 				<article>
-					<h3>Mixed Green<div>9</div></h3>
-					<p>greens, fennel, dill, capers, citrus dressing</p>
+					<h3 tabindex="0">Mixed Green</h3>
+					<p tabindex="0">greens, fennel, dill, capers, citrus dressing</p>
+					<div tabindex="0">9</div>
 				</article>
 				<article>
-					<h3>Chopped Salad<div>14</div></h3>
-					<p>smoked whitefish, avocado, beets, egg, apple, mixed greens, matzo, buttermilk dressing</p>
+					<h3 tabindex="0">Chopped Salad</h3>
+					<p tabindex="0">smoked whitefish, avocado, beets, egg, apple, mixed greens, matzo, buttermilk dressing</p>
+					<div tabindex="0">14</div>
 				</article>
 				<article>
-					<h3>Smoked Trout& Potato</h3>
-					<p>smoked trout, watercress, caper mustard dressing</p>
-					<div>14</div>
+					<h3 tabindex="0">Smoked Trout& Potato</h3>
+					<p tabindex="0">smoked trout, watercress, caper mustard dressing</p>
+					<div tabindex="0">14</div>
 				</article>
 			</div>
 		</section>
-		<section>
-			<h2 data-text="Sweet">Sweet</h2>
+		<section tabindex="0">
+			<h2 tabindex="0" data-text="Sweet">Sweet</h2>
 			<blockquote>
-				<p>"A moltsayt on a tsimes iz via a mayse on a moshl."</p>
-				<p>A meal without a sweet dish is like a story without a moral.</p>
+				<p tabindex="0"><span>"</span><span>A</span> <span>moltsayt</span> <span>on</span> <span>a</span> <span>tsimes</span> <span>iz</span> <span>via</span> <span>a</span> <span>mayse</span> <span>on</span> <span>a</span> <span>moshl.</span><span>"</span></p>
+				<p tabindex="0">A meal without a sweet dish is like a story without a moral.</p>
 				<cite>— Yiddish idiom</cite>
 			</blockquote>
-			<div>
+			<div tabindex="0">
 				<article>
-					<h3>blintzes</h3>
-					<p>fruit compote, sour cream</p>
-					<div>8</div>
+					<h3 tabindex="0">blintzes</h3>
+					<p tabindex="0">fruit compote, sour cream</p>
+					<div tabindex="0">8</div>
 				</article>
 				<article>
-					<h3>babka french toast</h3>
-					<p>chocolate babka, sour cream, berries</p>
-					<div>10</div>
+					<h3 tabindex="0">babka french toast</h3>
+					<p tabindex="0">chocolate babka, sour cream, berries</p>
+					<div tabindex="0">10</div>
 				</article>
 				<article>
-					<h3>noodle kugel</h3>
-					<p>farmer cheese, raisins, egg noodles</p>
-					<div>7</div>
+					<h3 tabindex="0">noodle kugel</h3>
+					<p tabindex="0">farmer cheese, raisins, egg noodles</p>
+					<div tabindex="0">7</div>
 				</article>
 				<article>
-					<h3>challah bread pudding</h3>
-					<p>dried apricots, caramel sauce</p>
-					<div>9</div>
+					<h3 tabindex="0">challah bread pudding</h3>
+					<p tabindex="0">dried apricots, caramel sauce</p>
+					<div tabindex="0">9</div>
 				</article>
 				<article>
-					<h3>halvah ice cream</h3>
-					<p>halvah, sesame, salted caramel</p>
-					<div>8</div>
+					<h3 tabindex="0">halvah ice cream</h3>
+					<p tabindex="0">halvah, sesame, salted caramel</p>
+					<div tabindex="0">8</div>
 				</article>
 				<article>
-					<h3>grandpa's grapefruit</h3>
-					<p>grapefruit, white germ, maple syrup</p>
-					<div>6</div>
+					<h3 tabindex="0">grandpa's grapefruit</h3>
+					<p tabindex="0">grapefruit, white germ, maple syrup</p>
+					<div tabindex="0">6</div>
 				</article>
 				<article>
-					<h3>baked farmer cheese</h3>
-					<p>blueberry, walnut &amp; honey with pumpernickel</p>
-					<div>7</div>
+					<h3 tabindex="0">baked farmer cheese</h3>
+					<p tabindex="0">blueberry, walnut &amp; honey with pumpernickel</p>
+					<div tabindex="0">7</div>
 				</article>
 				<article>
-					<h3>cookie plate</h3>
-					<p>Russ &amp; daughters cookies &amp; sweets</p>
-					<div>8</div>
+					<h3 tabindex="0">cookie plate</h3>
+					<p tabindex="0">Russ &amp; daughters cookies &amp; sweets</p>
+					<div tabindex="0">8</div>
 				</article>
 			</div>
 		</section>
+		<p><span>Accessibility is king!</span></p>
+		<svg width="216" height="267" viewBox="0 0 216 267" fill="none" xmlns="http://www.w3.org/2000/svg">
+			<path d="M33.5002 155.5H183.5V162C183.5 189.89 160.891 212.5 133 212.5H84.0002C56.1098 212.5 33.5002 189.89 33.5002 162V155.5Z" fill="black" stroke="black"/>
+			<circle cx="110" cy="97" r="96.5" fill="black" stroke="black"/>
+			<path d="M81.9128 197.536H71.8615L75.9849 206.703C82.4549 221.085 75.2411 235.821 70.5913 241.401L61.708 252.062H75.585C88.874 252.062 96.956 242.237 101.471 232.794C106.069 223.177 108.071 211.925 108.568 204.468L109.031 197.536H102.083H81.9128Z" fill="#FFF61C" stroke="black" stroke-width="13"/>
+			<path d="M136.17 197.536H146.221L142.098 206.703C135.628 221.085 142.842 235.821 147.491 241.401L156.375 252.062H142.498C129.209 252.062 121.127 242.237 116.612 232.794C112.014 223.177 110.012 211.925 109.514 204.468L109.052 197.536H116H136.17Z" fill="#FFF61C" stroke="black" stroke-width="13"/>
+			<path d="M48.2961 178.553H41.0498L41.8344 185.756C43.2695 198.934 43.4161 208.715 42.7407 215.832C42.0551 223.056 40.5724 226.968 39.2511 228.918C38.1594 230.529 37.3159 230.681 36.6284 230.692C35.4815 230.711 33.6235 230.186 31.1881 228.631C25.6436 225.092 16.9941 224.168 11.0455 230.117C4.96316 236.199 5.19597 247.005 13.2665 252.035C24.8022 259.224 35.3081 261.681 44.5642 259.032C53.7966 256.391 60.0097 249.177 64.1173 241.02C72.2242 224.921 74.0154 201.531 73.3794 184.806L73.1417 178.553H66.8841H48.2961Z" fill="#FFF61C" stroke="black" stroke-width="13"/>
+			<path d="M167.847 178.553H175.093L174.308 185.756C172.873 198.934 172.727 208.715 173.402 215.832C174.088 223.056 175.57 226.968 176.892 228.918C177.983 230.529 178.827 230.681 179.514 230.692C180.661 230.711 182.519 230.186 184.955 228.631C190.499 225.092 199.149 224.168 205.097 230.117C211.18 236.199 210.947 247.005 202.876 252.035C191.341 259.224 180.835 261.681 171.579 259.032C162.346 256.391 156.133 249.177 152.026 241.02C143.919 224.921 142.127 201.531 142.763 184.806L143.001 178.553H149.259H167.847Z" fill="#FFF61C" stroke="black" stroke-width="13"/>
+			<path d="M106 103V97H100H44.0002H38.0002V103C38.0002 121.778 53.2225 137 72.0002 137C90.7778 137 106 121.778 106 103Z" fill="#FFF61C" stroke="black" stroke-width="12"/>
+			<path d="M182 103V97H176H120H114V103C114 121.778 129.222 137 148 137C166.778 137 182 121.778 182 103Z" fill="#FFF61C" stroke="black" stroke-width="12"/>
+			<defs>
+			<linearGradient id="paint0_linear" x1="109.857" y1="0" x2="109.857" y2="194" gradientUnits="userSpaceOnUse">
+			<stop stop-color="#FF0101"/>
+			<stop offset="1"/>
+			</linearGradient>
+			</defs>
+		</svg>
 	</main>
 	<!-- http://beatrizl.com/project/ancho -->
 	<!-- HTML taken and adjusted from https://codepen.io/julesforrest/pen/VqXvgQ -->
