--- a/eindopdracht/index.html
+++ b/eindopdracht/index.html
@@ -5,6 +5,7 @@
 		<title>Russ & Daughters</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="styles/main.css">
+		<!-- <link rel="stylesheet" href="styles/old versies/main_18-02-2021.css"> -->
 		<link rel="stylesheet" media="print" href="styles/print.css">
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Lemonada:wght@500&display=swap" rel="stylesheet">
